# minidb

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: db.rs  log.rs  main.rs
src/log/: buffer.rs  mod.rs  operation.rs
tests/data/: invalid_op.wal  replay.wal
