[package]
name = "minidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
glob = "0.3.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"
